Fix for fonts not loading on mobile

--- a/src/fonts.css
+++ b/src/fonts.css
@@ -1,28 +1,28 @@
 /* Objectiviy Font Family Import (Medium & Normal)*/
 @font-face {
   font-family: "Objectivity";
-  src: url("/fonts/Objectivity-Light.otf") format("otf");
+  src: url("/fonts/Objectivity-Light.otf") format("OpenType");
   font-weight: light;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Objectivity";
-  src: url("/fonts/Objectivity-Medium.otf") format("otf");
+  src: url("/fonts/Objectivity-Medium.otf") format("OpenType");
   font-weight: medium;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Objectivity";
-  src: url("/fonts/Objectivity-Regular.otf") format("otf");
+  src: url("/fonts/Objectivity-Regular.otf") format("OpenType");
   font-weight: regular;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Objectivity";
-  src: url("/fonts/Objectivity-Bold.otf") format("otf");
+  src: url("/fonts/Objectivity-Bold.otf") format("OpenType");
   font-weight: bold;
   font-style: normal;
   font-display: swap;
